[package]
name = "gh-issues-dl"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.1.11", features = ["derive"] }
octocrab = "0.18.1"
serde_json = "1.0.94"
tokio = { version = "1.26.0", features = ["full"] }
